Fix a wrap problem

--- a/css/index_mobile.css
+++ b/css/index_mobile.css
@@ -57,11 +57,10 @@ article {
   color: rgb(231, 223, 191);
   text-align: center;
   font-size: 200%;
-  line-height: 180px;
 }
 
 p {
-  margin-top: 0;
+  margin-top: 70px;
 }
 
 .vline {
